# cinema

./: .dockerignore  .env.dev  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/cinema/: admin.py  models.py  permissions.py  urls.py
app/cinema/management/commands/: add_movie.py  populate_db.py
app/cinema/migrations/: 0001_initial.py
app/cinema/serializers/: auth_serializer.py  author_serializer.py  film_serializer.py  rating_serializer.py
app/cinema/services/: tmdb.py
app/cinema/tests/: test_serializers.py
app/cinema/views/: auth.py  authors.py  films.py  ratings_favorites_spectator.py
app/config/: settings.py  urls.py
